dist_man1_MANS=

if BUILD_OLIVINGCOIND
  dist_man1_MANS+=olivingcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=olivingcoin-qt.1
endif

if BUILD_OLIVINGCOIN_CLI
  dist_man1_MANS+=olivingcoin-cli.1
endif

if BUILD_OLIVINGCOIN_TX
  dist_man1_MANS+=olivingcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_OLIVINGCOIN_WALLET
  dist_man1_MANS+=olivingcoin-wallet.1
endif
endif
